--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nconfig",
   "version": "0.1.0",
-  "homepage": "https://soulnaturalist.github.io/Nconfig/",
+  "homepage": "https://github.com/soulnaturalist/Nconfig",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
